<resources>
    <string name="app_name">3T Banking</string>

    <string name="email">E-mail</string>
    <string name="login">Đăng nhập</string>
    <string name="login_btn">Đăng nhập</string>
    <string name="pass">Mật khẩu</string>
    <string name="pass_hint">******</string>

    <!-- Error   -->
    <string name="email_pass_wrong">E-mail hoặc mật khẩu không chính xác</string>
    <string name="email_not_exist">Tài khoản không tồn tại</string>
    <string name="email_empty">Vui lòng nhập e-mail</string>
    <string name="email_wrong_format">E-mail không đúng định dạng</string>
    <string name="register_btn">Đăng ký</string>
    <string name="birthday">Ngày sinh</string>
    <string name="phone">Số điện thoại</string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="nation_id">Số CCCD</string>
    <string name="gender">Giới tính</string>
    <string name="create_account">Tạo tài khoản</string>
    <string name="card_back">Mặc sau CCCD</string>
    <string name="card_front">Mặc trước CCCD</string>

    <!--    Gender-->
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="exp_user">Nguyễn Văn A</string>
    <string name="exp_balance">100.000</string>
    <string name="exp_account_number">103146XXXX</string>
    <string name="interestRate">Lãi suất</string>
    <string name="exp_interest_rate">0.5</string>
    <string name="exp_end_date">31/12/2025 14:58:56</string>
    <string name="exp_start_date">01/01/2025 14:58:56</string>
    <string name="exp_amount_money_text">10.000.000 VND</string>
    <string name="exp_amount_money">10.000.000</string>
    <string name="exp_money_mortgage">120.000.000</string>
    <string name="exp_phone_number">0908871XXX</string>
    <string name="recharge_phone">Nạp tiền điện thoại</string>
    <string name="free">miễn phí</string>
    <string name="exp_viettel">Viettel</string>
    <string name="otp_sent_success">Mã OTP đã được gửi đến %s</string>
    <string name="otp_verification_failed">Mã OTP không chính xác. Vui lòng thử lại.</string>
    <string name="otp_verification_success">Xác thực thành công!</string>
    <string name="otp_expired">Mã OTP đã hết hạn. Vui lòng gửi lại.</string>
    <string name="title_activity_edit_customer_info">Sửa Thông Tin Khách Hàng</string>
    <string name="default_notification_channel_id" translatable="false">customer_transaction_updates_channel</string>
</resources>